force-app/main/default/objects/leankor__BroadcastEvent__e/leankor__BroadcastEvent__e.object-meta.xml
<CustomObject>
    <description>All Leankor custom-level events will be published to the bus on this channel.</description>
    <label>Broadcast Event</label>
    <pluralLabel>Broadcast Events</pluralLabel>
</CustomObject>