force-app/main/default/objects/leankor__BroadcastEvent__e/fields/leankor__EventCategory__c.field-meta.xml
<CustomField>
    <fullName>leankor__EventCategory__c</fullName>
    <description>The general grouping or category of events.</description>
    <label>Event Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>