force-app/main/default/objects/leankor__BroadcastEvent__e/fields/leankor__EventName__c.field-meta.xml
<CustomField>
    <fullName>leankor__EventName__c</fullName>
    <description>The specific name or verb which describes the Leankor event. For example &quot;UpdateKanbanCard&quot; or &quot;CreateKanbanCard&quot;. No spaces.</description>
    <label>Event Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>