force-app/main/default/objects/leankor__BroadcastEvent__e/fields/leankor__SessionID__c.field-meta.xml
<CustomField>
    <fullName>leankor__SessionID__c</fullName>
    <description>Globally unique id used by the message sender to avoid processing its own message.</description>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>